--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.3.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6"
   },
